tests/fail/grid_join_collide.msh
# Column collision should error before doing any work.
[| id, x; 1, "a" |] xg!
[| id, y; 1, "b" |] yg!
@xg @yg (:id?) (:id?) join wl
